[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/textures/test_tile.png" type="Texture" id=1]
[ext_resource path="res://scenes/level/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/level/PlayableLevels/BaseLevel.gd" type="Script" id=3]
[ext_resource path="res://scenes/ui/Fade.tscn" type="PackedScene" id=4]

[sub_resource type="NavigationPolygon" id=1]
vertices = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=2]
vertices = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=3]
vertices = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="TileSet" id=4]
0/name = "test_tile.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/navigation = SubResource( 1 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "test_tile.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 384, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/navigation = SubResource( 2 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "test_tile.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 448, 0, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/navigation = SubResource( 3 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="TileSet" id=6]
0/name = "test_tile.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 576, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 5 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[node name="BaseLevel" type="Node2D"]
script = ExtResource( 3 )

[node name="Tilemaps" type="Navigation2D" parent="."]

[node name="TileMapGround" type="TileMap" parent="Tilemaps"]
tile_set = SubResource( 4 )
format = 1

[node name="TileMapWall" type="TileMap" parent="Tilemaps"]
tile_set = SubResource( 6 )
format = 1

[node name="Objects" type="YSort" parent="."]

[node name="Player" parent="Objects" instance=ExtResource( 2 )]

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0, 0, 0, 1 )

[node name="AudioStreamPlayerMusic" type="AudioStreamPlayer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Fade" parent="CanvasLayer" instance=ExtResource( 4 )]
